<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp"
    tools:ignore="ExtraText"
    android:orientation="vertical">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:foregroundGravity="center"
        android:src="@drawable/shop" />

    <EditText
        android:id="@+id/et_logemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_logpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:hint="@string/passhint"
        android:inputType="textPassword" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/remcheck"
        android:textColor="#1D74BA"
        android:textSize="16sp"
        android:textStyle="normal" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/loginbut" />

    <TextView
        android:id="@+id/tx_forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/passforget"
        android:textColor="#1D74BA"
        android:textSize="17sp"
        android:textStyle="normal"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/btn_createNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:text="@string/createaccbut" />
</LinearLayout>