<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".ForgetActivity">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/shop"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textSize="20sp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/et_rstemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/resetEmail"
        android:textStyle="bold"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btn_sendResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetPassword"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>


</LinearLayout>